fixed china character messy code
Change-Id: I880889b142080a9e27a5eb25555e36d11969d715

--- a/src/service_config.properties
+++ b/src/service_config.properties
@@ -1,5 +1,5 @@
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/project_monitor
+db.url = jdbc:mysql://localhost:3306/project_monitor?&useUnicode=true&characterEncoding=UTF8
 db.username = root
 db.password =
 
